@@ -1,6 +1,6 @@
 Package: marked
-Version: 1.1.13
-Date: 2016-12-5
+Version: 1.1.14
+Date: 2016-12-12
 Title: Mark-Recapture Analysis for Survival and Abundance Estimation
 Author: Jeff Laake <jeff.laake@noaa.gov>, Devin Johnson
     <devin.johnson@noaa.gov>, Paul Conn <paul.conn@noaa.gov>
