@@ -219,27 +219,29 @@ For example, if you were to use ~time for Phi with survival fixed to 1 for time 
 be included.
 
 To use ADMB (use.admb=TRUE), you need to install: 1) the R package R2admb, 2) ADMB, and 3) a C++ compiler (I recommend gcc compiler).
-The following are instructions for installation with Windows. For other operating systems see (http://www.admb-project.org/downloads) and 
- (http://www.admb-project.org/tools/gcc/).
+The following are instructions for installation with Windows. For other operating systems see (\url{http://www.admb-project.org/downloads}) and 
+ (\url{http://www.admb-project.org/tools/gcc/}).
 
 Windows Instructions:
 
 1) In R use install.packages function or choose Packages/Install Packages from menu and select R2admb.
 
-2) Install ADMB 11: http://admb-project.googlecode.com/files/admb-11-mingw-gcc4.5-32bit.exe. Put the software in C:/admb to
+2) Install ADMB 11: \url{http://www.admb-project.org/downloads}. Put the software in C:/admb to
  avoid problems with spaces in directory name and for the function below to work.
 
-3) Install gcc 4.5 from: http://www.admb-project.org/tools/gcc/gcc452-win32.zip/view. Put in c:/MinGW
+3) Install gcc compiler from: \url{http://www.admb-project.org/tools/gcc/}. Put in c:/MinGW
 
 I use the following function in R to setup R2admb to access ADMB rather than adding to my path so gcc versions
 with Rtools don't conflict.
 
+\preformatted{
 prepare_admb=function()
 {
   Sys.setenv(PATH = paste("c:/admb/bin;c:admb/utilities;c:/MinGW/bin;", 
         Sys.getenv("PATH"), sep = ";"))
     Sys.setenv(ADMB_HOME = "c:/admb")
     invisible()
+}
 }
 To use different locations you'll need to change the values used above
 
